Implement 1st Review Corrections

--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
     </div>
 
     <div class="modal">
-      <p class="modal-text"></p>
+      <div class="modal-text">
+        <h2>Congatulations!!!</h2>
+        <p>You completed the game in</p>
+        <p><span id=totalMoves></span> moves with a time of <span id=totalMin></span> min <span id=totalSec></span> sec</p>
+        <p>You've earned <span id=totalStars></span> stars!</p>
+        <br>
+        <button id="playAgain">Play again</button>
+      </div>
     </div>
 
     <script src="js/app.js"></script>
